Added lock/unlock of individual games for command. Changed the look of the picks page so that the team logos are the radio buttons.

--- a/command/templates/command/command.html
+++ b/command/templates/command/command.html
@@ -1,41 +1,25 @@
 {% extends "fantasyFootball/base.html" %} {% block page_content %}
 <div class="container">
     <h1>Command Central</h1>
-    <form action="score/">
-        {% csrf_token %}
-        <input type="submit" class="btn btn-primary" value="Score Players">
-    </form>
     <hr>
-    <form action="createseason/">
-        {% csrf_token %}
-        <input type="submit" class="btn btn-primary" value="Create new season">
-    </form>
-    <hr>
-    <a href="lock/1/" class="btn btn-sm btn-info">Lock Games</a>
-    <hr>
-    <div class="dropdown">
-        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Score Games
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="score/1/">Week 1</a>
-            <a class="dropdown-item" href="score/2/">Week 2</a>
-            <a class="dropdown-item" href="score/3/">Week 3</a>
-            <a class="dropdown-item" href="score/4/">Week 4</a>
-            <a class="dropdown-item" href="score/5/">Week 5</a>
-            <a class="dropdown-item" href="score/6/">Week 6</a>
-            <a class="dropdown-item" href="score/7/">Week 7</a>
-            <a class="dropdown-item" href="score/8/">Week 8</a>
-            <a class="dropdown-item" href="score/9/">Week 9</a>
-            <a class="dropdown-item" href="score/10/">Week 10</a>
-            <a class="dropdown-item" href="score/11/">Week 11</a>
-            <a class="dropdown-item" href="score/12/">Week 12</a>
-            <a class="dropdown-item" href="score/13/">Week 13</a>
-            <a class="dropdown-item" href="score/14/">Week 14</a>
-            <a class="dropdown-item" href="score/15/">Week 15</a>
-            <a class="dropdown-item" href="score/16/">Week 16</a>
-            <a class="dropdown-item" href="score/17/">Week 17</a>
+    <h4>Season Settings</h4>
+    <div class="row">
+        <div class="dropdown">
+            <button class="btn btn-sm btn-indigo dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select Season</button>
+            <div class="dropdown-menu">
+                {% for season in seasons %}
+                <a class="dropdown-item" href="/command/{{ season.year }}/">{{ season.year }}</a> {% endfor %}
+            </div>
         </div>
+    </div>
+    <hr>
+    <h4>Create New Season</h4>
+    <div class="row">
+        <form action="createseason/">
+            {% csrf_token %}
+            <!-- <input type="text" value="Season Year"> -->
+            <input type="submit" class="btn btn-sm btn-indigo" value="Create new season">
+        </form>
     </div>
 </div>
 {% endblock %}
