--- a/picks/static/picks/css/picks.css
+++ b/picks/static/picks/css/picks.css
@@ -7,7 +7,7 @@ input[type=radio]+label::before {
     display: inline-block;
     border: 2px solid #000;
     border-radius: 25%;
-    margin: 0 0.5em;
+    margin: 0 0em;
 }
 
 input[type=radio]:checked+label::before {
@@ -15,6 +15,29 @@ input[type=radio]:checked+label::before {
 }
 
 .radio-custom+label::before {
-    width: 1.5em;
-    height: 1.5em;
+    width: 1em;
+    height: 1em;
+}
+
+[type=radio] {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+
+/* IMAGE STYLES */
+
+[type=radio]+img {
+    cursor: pointer
+}
+
+
+/* CHECKED STYLES */
+
+[type=radio]:checked+img {
+    outline: 2px solid rgb(58, 59, 59);
+    background-color: #33b5e5;
+    opacity: 0.6;
 }
