--- a/league/templates/league/joinLeague.html
+++ b/league/templates/league/joinLeague.html
@@ -36,7 +36,7 @@
         <div class="col">
             <div class="text-center">
                 <h4>There are currently no leagues to join. Go create one now!</h4>
-                <a type="button" href="/league/create/" class="btn btn-outline-info main-color">Create League</a>
+                <a href="/league/create/" class="btn btn-outline-info main-color">Create League</a>
             </div>
         </div>
         {% endif %}
