--- a/picks/templates/picks/picks.html
+++ b/picks/templates/picks/picks.html
@@ -13,7 +13,7 @@
                     <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select League</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         {% for league in userLeagues %}
-                        <a class="dropdown-item" type="submit" href="/home/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
+                        <a class="dropdown-item" href="/home/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
                     </div>
                 </div>
             </div>
@@ -69,15 +69,6 @@
                             <fieldset class="form-group">
                                 {% csrf_token %} {% for currentPick in pickData %} {% if currentPick.pickLocked == False %}
                                 <tr>
-                                    <!--<td><img src="/static/media/{{ currentPick.homeTeam }}.png" alt="{{ currentPick.homeTeam }}" class="img-fluid" width="50" height="50"></td>
-                                    <td>
-                                        <div class="form-check">
-                                            {% if currentPick.pick == currentPick.homeTeam %}
-                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" checked> {% else %}
-                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}">{% endif %}
-                                            <label class="form-check-label" for="{{ currentPick.homeTeam }}">{{ currentPick.homeTeam }}</label>
-                                        </div>
-                                    </td>-->
                                     <td class="text-center">
                                         <label>
                                             {% if currentPick.pick == currentPick.homeTeam %}
@@ -99,30 +90,9 @@
                                             <img class="img-fluid" src="/static/media/{{ currentPick.awayTeam }}.png" width="100" height="100">
                                         </label>
                                     </td>
-
-                                    <!--<td>
-                                        <div class="form-check">
-                                            {% if currentPick.pick == currentPick.awayTeam %}
-                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" checked> {% else %}
-                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}"> {% endif %}
-                                            <label class="form-check-label" for="{{ currentPick.awayTeam }}">{{ currentPick.awayTeam }}</label>
-                                        </div>
-                                    </td>
-                                    <td><img src="/static/media/{{ currentPick.awayTeam }}.png" alt="{{ currentPick.awayTeam }}" class="img-fluid" width="50" height="50"></td>-->
                                 </tr>
                                 {% else %}
                                 <tr>
-                                    <!--<td><img src="/static/media/{{ currentPick.homeTeam }}.png" alt="{{ currentPick.homeTeam }}" class="img-fluid" width="50" height="50"></td>
-                                    <td>
-                                        <div class="form-check">
-                                            {% if currentPick.pick == currentPick.homeTeam %}
-                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" checked disabled> {% else %}
-                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" disabled>{% endif %}
-                                            <label class="form-check-label" for="{{ currentPick.homeTeam }}">
-                                        {{ currentPick.homeTeam }}
-                              </label>
-                                        </div>
-                                    </td>-->
                                     <td class="text-center">
                                         <label>
                                             {% if currentPick.pick == currentPick.homeTeam %}
@@ -144,18 +114,6 @@
                                             <img class="img-fluid" src="/static/media/{{ currentPick.awayTeam }}.png" width="100" height="100">
                                         </label>
                                     </td>
-
-                                    <!--<td>
-                                        <div class="form-check">
-                                            {% if currentPick.pick == currentPick.awayTeam %}
-                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" checked disabled> {% else %}
-                                            <input class="form-check-input radio-custom" type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" disabled> {% endif %}
-                                            <label class="form-check-label" for="{{ currentPick.awayTeam }}">
-                                        {{ currentPick.awayTeam }}
-                              </label>
-                                        </div>
-                                    </td>
-                                    <td><img src="/static/media/{{ currentPick.awayTeam }}.png" alt="{{ currentPick.awayTeam }}" class="img-fluid" width="50" height="50"></td>-->
                                 </tr>
                                 {% endif %} {% endfor %}
                             </fieldset>
