Cleaned up some more UI. Login, picks, user profile.

--- a/league/templates/league/createLeague.html
+++ b/league/templates/league/createLeague.html
@@ -10,7 +10,7 @@
         {% csrf_token %}
         <div class="form-row">
             <div class="form-group col-md-6">
-                <label>League Name*</label>
+                <label>League Name* - <small> Only alphanumeric values please.</small></label>
                 <input type="text" class="form-control" id="name" name="name" placeholder="League Name" required>
             </div>
         </div>
