--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -1,20 +1,20 @@
-{% extends "fantasyFootball/base.html" %}
-
-{% block page_content %}
+{% extends "fantasyFootball/base.html" %} {% block page_content %}
 <div class="container">
-    <h2>My Account</h2>
-    <div class="row my-2">
-        <div class="col-lg-8 order-lg-2">
-            <div class="tab-content py-4">
-                    <h5 class="mb-3">User Profile</h5>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <p>Welcome, {{ user.get_username }}</p>
-                        </div>
-                    </div>
-                </div>
-           </div>
+    <div class="row">
+        <div class="col-md-6">
+            <h2>My Account</h2>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-6">
+            <h5>User Profile</h5>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <p>Welcome, {{ user.get_username }}. Stay tuned. More features coming soon.</p>
+        </div>
+    </div>
+</div>
 </div>
 {% endblock %}
