--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -37,12 +37,10 @@
             </div>
             <button type="submit" class="btn btn-primary" value="login">Login</button>
             <input type="hidden" name="next" value="{{ next }}">
-            <div>
+            <div class="mt-3">
                 <a href="account/create">Create Account</a>
             </div>
-            <p class="mt-5 mb-3 text-muted">&copy; 2020-2021</p>
-
-
+            <p class="mt-4 text-muted">&copy; 2020-2021</p>
         </form>
     </body>
 </div>
