--- a/picks/templates/picks/picks.html
+++ b/picks/templates/picks/picks.html
@@ -6,11 +6,11 @@
         <!-- League title and league picker-->
         <div class="row">
             <div class="col-sm-8">
-                <h1 class="display-4card-title">{{ activeLeague }}</h1>
+                <h1>{{ activeLeague }}</h1>
             </div>
             <div class="col-sm-4">
-                <div class="dropdown float-right">
-                    <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select League</button>
+                <div class="dropdown">
+                    <button class="btn btn-sm btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select League</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         {% for league in userLeagues %}
                         <a class="dropdown-item" href="/home/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
@@ -20,36 +20,32 @@
         </div>
         <!-- Week title and week picker-->
         <div class="row">
-            <div class="col-4">
-                <div class="float-left">
-                    <h4>Week {{ currentWeek.id }} Games</h4>
-                </div>
+            <div class="col-sm-8">
+                <h4>Week {{ currentWeek.id }} Games</h4>
             </div>
-            <div class="col-8">
-                <div class="float-right">
-                    <div class="dropdown">
-                        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <div class="col-sm-4">
+                <div class="dropdown">
+                    <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Select Week
                 </button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="/picks/1/">Week 1</a>
-                            <a class="dropdown-item" href="/picks/2/">Week 2</a>
-                            <a class="dropdown-item" href="/picks/3/">Week 3</a>
-                            <a class="dropdown-item" href="/picks/4/">Week 4</a>
-                            <a class="dropdown-item" href="/picks/5/">Week 5</a>
-                            <a class="dropdown-item" href="/picks/6/">Week 6</a>
-                            <a class="dropdown-item" href="/picks/7/">Week 7</a>
-                            <a class="dropdown-item" href="/picks/8/">Week 8</a>
-                            <a class="dropdown-item" href="/picks/9/">Week 9</a>
-                            <a class="dropdown-item" href="/picks/10/">Week 10</a>
-                            <a class="dropdown-item" href="/picks/11/">Week 11</a>
-                            <a class="dropdown-item" href="/picks/12/">Week 12</a>
-                            <a class="dropdown-item" href="/picks/13/">Week 13</a>
-                            <a class="dropdown-item" href="/picks/14/">Week 14</a>
-                            <a class="dropdown-item" href="/picks/15/">Week 15</a>
-                            <a class="dropdown-item" href="/picks/16/">Week 16</a>
-                            <a class="dropdown-item" href="/picks/17/">Week 17</a>
-                        </div>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/picks/1/">Week 1</a>
+                        <a class="dropdown-item" href="/picks/2/">Week 2</a>
+                        <a class="dropdown-item" href="/picks/3/">Week 3</a>
+                        <a class="dropdown-item" href="/picks/4/">Week 4</a>
+                        <a class="dropdown-item" href="/picks/5/">Week 5</a>
+                        <a class="dropdown-item" href="/picks/6/">Week 6</a>
+                        <a class="dropdown-item" href="/picks/7/">Week 7</a>
+                        <a class="dropdown-item" href="/picks/8/">Week 8</a>
+                        <a class="dropdown-item" href="/picks/9/">Week 9</a>
+                        <a class="dropdown-item" href="/picks/10/">Week 10</a>
+                        <a class="dropdown-item" href="/picks/11/">Week 11</a>
+                        <a class="dropdown-item" href="/picks/12/">Week 12</a>
+                        <a class="dropdown-item" href="/picks/13/">Week 13</a>
+                        <a class="dropdown-item" href="/picks/14/">Week 14</a>
+                        <a class="dropdown-item" href="/picks/15/">Week 15</a>
+                        <a class="dropdown-item" href="/picks/16/">Week 16</a>
+                        <a class="dropdown-item" href="/picks/17/">Week 17</a>
                     </div>
                 </div>
             </div>
