--- a/account/templates/registration/register.html
+++ b/account/templates/registration/register.html
@@ -1,4 +1,23 @@
-{% extends "fantasyFootball/base.html" %} {% block page_content %}
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design for Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/css/mdb.min.css" rel="stylesheet">
+
+    <link href="/static/css/global.css" rel="stylesheet">
+    <link href="/static/css/datatables.min.css" rel="stylesheet">
+</head>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+        <img class="rounded img-fluid" src="/static/media/logoTitle.png" width="200" height="auto">
+    </a>
+</nav>
+<hr>
+
 <div class="container">
     <h2>Create a new account</h2>
     {% if error %}
@@ -41,4 +60,8 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
-{% endblock %}
+<!-- Bootstrap -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+<!-- Material Design for Bootstrap -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/js/mdb.min.js"></script>
