--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -26,11 +26,13 @@
             <li class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">League</a>
                 <div class="dropdown-menu">
-                    <a href="/league/home/" class="dropdown-item">Home</a>
-                    <a href="/picks/" class="dropdown-item">My Picks</a>
+                    <a href="/league/home/" class="dropdown-item">League Home</a>
                     <a href="/league/join/" class="dropdown-item">Join League</a>
                     <a href="/league/create/" class="dropdown-item">Create League</a>
                 </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/picks/">Picks</a>
             </li>
         </ul>
         <ul class="navbar-nav">
