--- a/account/templates/registration/register.html
+++ b/account/templates/registration/register.html
@@ -11,7 +11,7 @@
     <link href="/static/css/global.css" rel="stylesheet">
     <link href="/static/css/datatables.min.css" rel="stylesheet">
 </head>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg mb-3 navbar-dark" style="background-color: #6b696b">
     <a class="navbar-brand" href="#">
         <img class="rounded img-fluid" src="/static/media/logoTitle.png" width="200" height="auto">
     </a>
