--- a/league/templates/league/leagueHome.html
+++ b/league/templates/league/leagueHome.html
@@ -17,7 +17,7 @@
                 <div class="row">
                     <div class="col">
                         <h6 class="border-bottom border-gray pb-2 mb-0 ">Message Board</h6>
-                        <div class="overflow-auto message-board" style="height: 500px; overflow-y:auto">
+                        <div class="overflow-auto message-board" style="height: 500px; overflow-y:auto;">
                             <div class="my-3 p-3 bg-white rounded box-shadow messages-div">
                                 {% for currentMessage in leagueMessages %}
                                 <div class="media text-muted pt-3 ">
