--- a/picks/static/picks/css/picks.css
+++ b/picks/static/picks/css/picks.css
@@ -36,6 +36,12 @@ input[type=radio]:checked+label::before {
 
 /* CHECKED STYLES */
 
+[type=radio]:checked:disabled+img {
+    outline: 2px solid rgb(58, 59, 59);
+    background-color: #6f7070;
+    opacity: 0.6;
+}
+
 [type=radio]:checked+img {
     outline: 2px solid rgb(58, 59, 59);
     background-color: #33b5e5;
