--- a/picks/templates/picks/picks.html
+++ b/picks/templates/picks/picks.html
@@ -3,53 +3,41 @@
 
 <body>
     <div class="container">
-        <!-- League title and league picker-->
-        <div class="row">
-            <div class="col-sm-8">
-                <h1>{{ activeLeague }}</h1>
-            </div>
-            <div class="col-sm-4">
-                <div class="dropdown">
-                    <button class="btn btn-sm btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select League</button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        {% for league in userLeagues %}
-                        <a class="dropdown-item" href="/home/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
-                    </div>
+        <!--Select League and Week-->
+        <div class="row justify-content-center">
+            <div class="dropdown">
+                <button class="btn btn-sm btn-inline-block btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ activeLeague }}</button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    {% for league in userLeagues %}
+                    <a class="dropdown-item" href="/home/1/{{ league.name }}/">{{ league.name }}</a> {% endfor %}
                 </div>
             </div>
-        </div>
-        <!-- Week title and week picker-->
-        <div class="row">
-            <div class="col-sm-8">
-                <h4>Week {{ currentWeek.id }} Games</h4>
-            </div>
-            <div class="col-sm-4">
-                <div class="dropdown">
-                    <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Select Week
+            <div class="dropdown">
+                <button class="btn btn-secondary btn-inline-block btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Week {{ currentWeek.id }}
                 </button>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/picks/1/">Week 1</a>
-                        <a class="dropdown-item" href="/picks/2/">Week 2</a>
-                        <a class="dropdown-item" href="/picks/3/">Week 3</a>
-                        <a class="dropdown-item" href="/picks/4/">Week 4</a>
-                        <a class="dropdown-item" href="/picks/5/">Week 5</a>
-                        <a class="dropdown-item" href="/picks/6/">Week 6</a>
-                        <a class="dropdown-item" href="/picks/7/">Week 7</a>
-                        <a class="dropdown-item" href="/picks/8/">Week 8</a>
-                        <a class="dropdown-item" href="/picks/9/">Week 9</a>
-                        <a class="dropdown-item" href="/picks/10/">Week 10</a>
-                        <a class="dropdown-item" href="/picks/11/">Week 11</a>
-                        <a class="dropdown-item" href="/picks/12/">Week 12</a>
-                        <a class="dropdown-item" href="/picks/13/">Week 13</a>
-                        <a class="dropdown-item" href="/picks/14/">Week 14</a>
-                        <a class="dropdown-item" href="/picks/15/">Week 15</a>
-                        <a class="dropdown-item" href="/picks/16/">Week 16</a>
-                        <a class="dropdown-item" href="/picks/17/">Week 17</a>
-                    </div>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="/picks/1/">Week 1</a>
+                    <a class="dropdown-item" href="/picks/2/">Week 2</a>
+                    <a class="dropdown-item" href="/picks/3/">Week 3</a>
+                    <a class="dropdown-item" href="/picks/4/">Week 4</a>
+                    <a class="dropdown-item" href="/picks/5/">Week 5</a>
+                    <a class="dropdown-item" href="/picks/6/">Week 6</a>
+                    <a class="dropdown-item" href="/picks/7/">Week 7</a>
+                    <a class="dropdown-item" href="/picks/8/">Week 8</a>
+                    <a class="dropdown-item" href="/picks/9/">Week 9</a>
+                    <a class="dropdown-item" href="/picks/10/">Week 10</a>
+                    <a class="dropdown-item" href="/picks/11/">Week 11</a>
+                    <a class="dropdown-item" href="/picks/12/">Week 12</a>
+                    <a class="dropdown-item" href="/picks/13/">Week 13</a>
+                    <a class="dropdown-item" href="/picks/14/">Week 14</a>
+                    <a class="dropdown-item" href="/picks/15/">Week 15</a>
+                    <a class="dropdown-item" href="/picks/16/">Week 16</a>
+                    <a class="dropdown-item" href="/picks/17/">Week 17</a>
                 </div>
             </div>
         </div>
+        <!--Picks-->
         <div class="row">
             <div class="col">
                 <form action="" method="POST">
@@ -92,9 +80,9 @@
                                     <td class="text-center">
                                         <label>
                                             {% if currentPick.pick == currentPick.homeTeam %}
-                                            <input type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" disabled checked>
+                                            <input type="radio" class= "correct" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" disabled checked>
                                             {% else %}
-                                            <input type="radio" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" disabled>
+                                            <input type="radio" class="incorrect" name="{{ currentPick.game }}" id="{{ currentPick.homeTeam }}" value="{{ currentPick.homeTeam }}" disabled >
                                             {% endif %}
                                             <img class="img-fluid" src="/static/media/{{ currentPick.homeTeam }}.png" width="100" height="100">
                                         </label>
@@ -103,9 +91,9 @@
                                     <td class="text-center">
                                         <label>
                                             {% if currentPick.pick == currentPick.awayTeam %}
-                                            <input type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" disabled checked>
+                                            <input type="radio" class= "correct" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" disabled checked >
                                             {% else %}
-                                            <input type="radio" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" disabled>
+                                            <input type="radio" class= "incorrect" name="{{ currentPick.game }}" id="{{ currentPick.awayTeam }}" value="{{ currentPick.awayTeam }}" disabled>
                                             {% endif %}
                                             <img class="img-fluid" src="/static/media/{{ currentPick.awayTeam }}.png" width="100" height="100">
                                         </label>
