--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="/static/css/login.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> {% load static %}
+    <link href="{% static 'css/global.css' %}" rel="stylesheet">
+    <link href="{% static 'css/login.css' %}" rel="stylesheet">
 </head>
 
 <div class="container text-center">
 
     <body>
-        <img class="mb-2 img-fluid rounded" src="/static/media/logoTitle.png" width="350" height="auto">
+        <img class="mb-2 img-fluid rounded" src="{% static 'media/logoTitleWhite.png' %}" width="350" height="auto">
         <form class="form-signin" method="POST" action="{% url 'login' %}">
             {% csrf_token %} {% if form.errors %}
             <div class="alert alert-danger" role="alert">
@@ -33,10 +34,10 @@
                 <label for="password" class="sr-only">{{ form.password.label_tag }}</label>
                 <input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
             </div>
-            <button type="submit" class="btn btn-primary" value="login">Login</button>
+            <button type="submit" class="btn btn-blue" value="login">Login</button>
             <input type="hidden" name="next" value="{{ next }}">
             <div class="mt-3">
-                <a href="account/create">Create Account</a>
+                <a href="account/create" style="color:white;">Create Account</a>
             </div>
             <p class="mt-4 text-muted">&copy; 2020-2021</p>
         </form>
