--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -6,14 +6,13 @@
     <!-- Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design for Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/css/mdb.min.css" rel="stylesheet">
-
-    <link href="/static/css/global.css" rel="stylesheet">
-    <link href="/static/css/datatables.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/css/mdb.min.css" rel="stylesheet">{% load static %}
+    <link href="{% static 'css/global.css' %}" rel="stylesheet">
+    <link href="{% static 'css/datatables.min.css' %}" rel="stylesheet">
 </head>
-<nav class="navbar navbar-expand-lg mb-3 navbar-dark" style="background-color: #6b696b">
+<nav class="navbar navbar-expand-lg mb-3 navbar-dark" style="background-color: #292727">
     <a class="navbar-brand" href="#">
-        <img class="rounded img-fluid" src="/static/media/logoTitle.png" width="200" height="auto">
+        <img class="rounded img-fluid" src="{% static 'media/logoTitleWhite.png' %}" width="200" height="auto">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -37,7 +36,7 @@
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle username-nav" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Welcome, {{ user.username }}</a>
+                <a class="nav-link dropdown-toggle username-nav" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Welcome, {{ user.username }}</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="/account/">My Account</a>
                     <a class="dropdown-item" href="/logout/">Logout</a>
@@ -48,7 +47,7 @@
 </nav>
 <!-- jQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="/static/js/jquery.cookie.js"></script>
+<script src="{% static 'js/jquery.cookie.js' %}"></script>
 
 <!-- Popper.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
