--- a/static_in_env/css/login.css
+++ b/static_in_env/css/login.css
@@ -10,7 +10,7 @@ body {
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #ffffff;
+    background-color: #292727;
 }
 
 .form-signin {
