--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -15,6 +15,29 @@
             <p>Welcome, {{ user.get_username }}. Stay tuned. More features coming soon.</p>
         </div>
     </div>
+    <div class="row">
+        <button class="btn btn-sm btn-danger" data-toggle="modal" data-target="#deleteCOnfirm">Delete Account</button>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="deleteConfirm" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteModalLabel">Delete Account</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you would like to delete your account? <strong>If you are a league admin, this will also delete your league(s).</strong>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-sm btn-green" data-dismiss="modal">Cancel</button>
+                    <a href="/account/delete/" class="btn btn-sm btn-danger" id="deleteButton">Delete</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 {% endblock %}
